--- a/src/assets/less/_reset.less
+++ b/src/assets/less/_reset.less
@@ -1,3 +1,10 @@
+html,
+body {
+  width: 100%;
+  height: inherit;
+  min-height: 100vh;
+}
+
 html {
     overflow-x: hidden;
     overflow-y: scroll;
